2016-09-02  Natalia Portillo  <claunia@claunia.com>

	* Reiser.cs:
	* Reiser4.cs:
	* DiscImageChef.Filesystems.csproj: Adds support for Reiser
	filesystems, closes #19.

	* NILFS2.cs: Corrected plugin GUID not being unique.

2016-09-02  Natalia Portillo  <claunia@claunia.com>

	* NILFS2.cs:
	* DiscImageChef.Filesystems.csproj: Adds support for NILFS2
	filesystem.

2016-09-02  Natalia Portillo  <claunia@claunia.com>

	* F2FS.cs:
	* DiscImageChef.Filesystems.csproj: Adds support for F2FS.

2016-09-02  Natalia Portillo  <claunia@claunia.com>

	* JFS.cs:
	* DiscImageChef.Filesystems.csproj: Adds support for IBM JFS,
	closes #20.

2016-09-02  Natalia Portillo  <claunia@claunia.com>

	* BTRFS.cs: Corrected information missing lines.

2016-09-02  Natalia Portillo  <claunia@claunia.com>

	* QNX6.cs:
	* QNX4.cs:
	* DiscImageChef.Filesystems.csproj: Adds support for QNX6
	filesystem, closes #18.

2016-09-02  Natalia Portillo  <claunia@claunia.com>

	* QNX4.cs:
	* DiscImageChef.Filesystems.csproj: Adds support for QNX4
	filesystem. #18

2016-08-26  Natalia Portillo  <claunia@claunia.com>

	* Info.cs: Typo in HDD superblock, not allocating enough
	memory.

2016-08-26  Natalia Portillo  <claunia@claunia.com>

	* CPM.cs:
	* Dir.cs:
	* File.cs:
	* Info.cs:
	* Xattr.cs:
	* Super.cs:
	* Consts.cs:
	* Structs.cs:
	* cpmdefs.xml:
	* Definitions.cs:
	* DiscImageChef.Filesystems.csproj: Added CP/M filesystem,
	closes #29.

2016-08-26  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs: Typo.

2016-08-21  Natalia Portillo  <claunia@claunia.com>

	* Dir.cs:
	* File.cs:
	* Info.cs:
	* Super.cs:
	* Xattr.cs:
	* Extent.cs:
	* Structs.cs:
	* DiscImageChef.Filesystems.csproj: Separate Lisa tag decoding
	from Lisa filesystem and added Priam tags.

2016-08-18  Natalia Portillo  <claunia@claunia.com>

	* exFAT.cs:
	* DiscImageChef.Filesystems.csproj: Added support for exFAT,
	this closes #15.

2016-08-09  Natalia Portillo  <claunia@claunia.com>
